--- a/index.html
+++ b/index.html
@@ -361,10 +361,34 @@
                            <span><i class="fa-solid fa-phone"></i>+1(062)109-9222</span>
                         </div>
                     </div>
-                    <div class="company-section"></div>
-                    <div class="features-section"></div>
-                    <div class="documentation-section"></div>
-                    <div class="resources-section"></div>
+                    <div class="company-section">
+                        <div class="company"><strong>Company</strong></div>
+                        <div class="about">About</div>
+                        <div class="careers">Careers<span><a href="#">We're hiring</a></span></div>
+                        <div>Blog</div>
+                        <div>Customers</div>
+                        <div>Hire Us</div>
+                    </div>
+                    <div class="features-section">
+                        <div><strong>Features</strong></div>
+                        <div>Press</div>
+                        <div>Release notes</div>
+                        <div>Integrations</div>
+                        <div>Pricing</div>
+                    </div>
+                    <div class="documentation-section">
+                        <div><strong>Documentation</strong></div>
+                        <div>Support</div>
+                        <div>Docs</div>
+                        <div>Status</div>
+                        <div>API Reference</div>
+                        <div>Tech Requirements</div>
+                    </div>
+                    <div class="resources-section">
+                        <div class="resources"><strong>Resources</strong></div>
+                        <div class="help"><i class="fa-solid fa-circle-info"></i>Help</div>
+                        <div class="your-account"><i class="fa-solid fa-circle-user"></i>Your Account</div>
+                    </div>
                 </footer>
 
 
